[gd_scene load_steps=12 format=2]

[ext_resource path="res://src/dynamic_fonts/Pixellari_22.tres" type="DynamicFont" id=1]
[ext_resource path="res://src/themes/MainMenu.tres" type="Theme" id=2]
[ext_resource path="res://assets/ui/upgrade_icons/Kunai.png" type="Texture" id=3]
[ext_resource path="res://src/scenes/ButtonAudioPlayer.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/animations/FadeOut.tres" type="Animation" id=5]
[ext_resource path="res://assets/ui/coin_icon/coin.png" type="Texture" id=6]
[ext_resource path="res://assets/ui/upgrade_icons/health_icon.png" type="Texture" id=7]
[ext_resource path="res://src/dynamic_fonts/Pixellari_32.tres" type="DynamicFont" id=8]
[ext_resource path="res://src/scripts/UpgradeMenu.gd" type="Script" id=9]
[ext_resource path="res://assets/sfx/menu/upgrade.wav" type="AudioStream" id=10]

[sub_resource type="Animation" id=1]
resource_name = "RESET"
tracks/0/type = "value"
tracks/0/path = NodePath("FadeRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("FadeRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="UpgradeMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="V" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="V"]
margin_top = 17.0
margin_right = 1024.0
margin_bottom = 65.0
text = "Upgrades"
align = 1
valign = 1

[node name="CoinsHBox" type="HBoxContainer" parent="V"]
margin_top = 69.0
margin_right = 1024.0
margin_bottom = 99.0
alignment = 1

[node name="TextureRect" type="TextureRect" parent="V/CoinsHBox"]
margin_left = 478.0
margin_right = 508.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
texture = ExtResource( 6 )
expand = true

[node name="CoinsLabel" type="Label" parent="V/CoinsHBox"]
margin_left = 512.0
margin_top = 3.0
margin_right = 545.0
margin_bottom = 26.0
custom_fonts/font = ExtResource( 1 )
text = "999"

[node name="H1" type="HBoxContainer" parent="V"]
margin_top = 103.0
margin_right = 1024.0
margin_bottom = 459.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="V1" type="VBoxContainer" parent="V/H1"]
margin_right = 510.0
margin_bottom = 356.0
size_flags_horizontal = 3
alignment = 1

[node name="H1" type="HBoxContainer" parent="V/H1/V1"]
margin_right = 510.0
margin_bottom = 200.0
size_flags_horizontal = 3
alignment = 1

[node name="TextureRect" type="TextureRect" parent="V/H1/V1/H1"]
margin_left = 155.0
margin_right = 355.0
margin_bottom = 200.0
grow_horizontal = 2
rect_min_size = Vector2( 200, 200 )
texture = ExtResource( 7 )
stretch_mode = 5

[node name="HealthMultiplierLabel" type="Label" parent="V/H1/V1"]
margin_top = 204.0
margin_right = 510.0
margin_bottom = 252.0
text = "x99"
align = 1
valign = 1

[node name="HealthCostLabel" type="Label" parent="V/H1/V1"]
margin_top = 256.0
margin_right = 510.0
margin_bottom = 288.0
custom_fonts/font = ExtResource( 8 )
text = "Cost: 999"
align = 1
valign = 1

[node name="H2" type="HBoxContainer" parent="V/H1/V1"]
margin_top = 292.0
margin_right = 510.0
margin_bottom = 356.0
alignment = 1

[node name="HealthUpgradeButton" type="Button" parent="V/H1/V1/H2"]
margin_left = 162.0
margin_right = 348.0
margin_bottom = 64.0
rect_min_size = Vector2( 186, 64 )
text = "Upgrade"

[node name="V2" type="VBoxContainer" parent="V/H1"]
margin_left = 514.0
margin_right = 1024.0
margin_bottom = 356.0
size_flags_horizontal = 3
alignment = 1

[node name="H1" type="HBoxContainer" parent="V/H1/V2"]
margin_right = 510.0
margin_bottom = 200.0
size_flags_horizontal = 3
alignment = 1

[node name="TextureRect" type="TextureRect" parent="V/H1/V2/H1"]
margin_left = 155.0
margin_right = 355.0
margin_bottom = 200.0
grow_horizontal = 2
rect_min_size = Vector2( 200, 200 )
texture = ExtResource( 3 )
stretch_mode = 5

[node name="StrengthMultiplierLabel" type="Label" parent="V/H1/V2"]
margin_top = 204.0
margin_right = 510.0
margin_bottom = 252.0
text = "x99"
align = 1
valign = 1

[node name="StrengthCostLabel" type="Label" parent="V/H1/V2"]
margin_top = 256.0
margin_right = 510.0
margin_bottom = 288.0
custom_fonts/font = ExtResource( 8 )
text = "Cost: 999"
align = 1
valign = 1

[node name="H2" type="HBoxContainer" parent="V/H1/V2"]
margin_top = 292.0
margin_right = 510.0
margin_bottom = 356.0
alignment = 1

[node name="StrengthUpgradeButton" type="Button" parent="V/H1/V2/H2"]
margin_left = 162.0
margin_right = 348.0
margin_bottom = 64.0
rect_min_size = Vector2( 186, 64 )
text = "Upgrade"

[node name="H2" type="HBoxContainer" parent="V"]
margin_top = 463.0
margin_right = 1024.0
margin_bottom = 527.0
alignment = 1

[node name="GoBackButton" type="Button" parent="V/H2"]
margin_left = 419.0
margin_right = 605.0
margin_bottom = 64.0
rect_min_size = Vector2( 186, 64 )
text = "Back To Menu"

[node name="FadeRect" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonAudioPlayer" parent="." instance=ExtResource( 4 )]

[node name="UpgradeAudioPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
mix_target = 2
bus = "SFX"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "RESET"
"anims/Fade Out" = ExtResource( 5 )
anims/RESET = SubResource( 1 )

[connection signal="pressed" from="V/H1/V1/H2/HealthUpgradeButton" to="." method="_on_HealthUpgradeButton_pressed"]
[connection signal="pressed" from="V/H1/V2/H2/StrengthUpgradeButton" to="." method="_on_StrengthUpgradeButton_pressed"]
[connection signal="pressed" from="V/H2/GoBackButton" to="." method="_on_GoBackButton_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
